#10553 [SCSS 개선] mixins, function 리팩터링 검토

--- a/src/main/resources/public/assets/css/document2.css
+++ b/src/main/resources/public/assets/css/document2.css
@@ -974,7 +974,7 @@ select:disabled {
   outline: 0;
   border: 0.0625rem solid #EBEBEB;
   border-radius: 0.0625rem;
-  box-shadow: 0 0 0.3125rem 0 #ebebeb;
+  box-shadow: 0 0 0.3125rem 0 #EBEBEB;
 }
 .select .designed-options li {
   margin: 0;
