--- a/src/main/resources/public/src/scss/form/_components.scss
+++ b/src/main/resources/public/src/scss/form/_components.scss
@@ -388,15 +388,15 @@
       }
     
       &.adjoin {
-        border-bottom-color: rgba(135, 206, 255, 0); // $light bule
+        border-bottom-color: hexToRGBA(map-get($blues, 'light'), 0); // $light bule
       }
       // 인접 컴포넌트
       + .component.selected {
         border-width: $component-border-width; // 1px
         border-style: solid;
-        border-color: rgba(135, 206, 255, 0) $component-pressed-border-color $component-pressed-border-color $component-pressed-border-color;
+        border-color: hexToRGBA(map-get($blues, 'light'), 0) $component-pressed-border-color $component-pressed-border-color $component-pressed-border-color;
         &.adjoin {
-          border-bottom-color: rgba(135, 206, 255, 0);
+          border-bottom-color: hexToRGBA(map-get($blues, 'light'), 0);
         }
       }
       // 첫번째 선택된 컴포넌트를 제외하고 tooltip 미출력
