--- a/src/main/resources/public/src/scss/formRefactoring/_layout.scss
+++ b/src/main/resources/public/src/scss/formRefactoring/_layout.scss
@@ -192,7 +192,7 @@
     opacity: 0.5;
   }
   .drag-in {
-    background-color: rgba(135, 206, 255, 0.1);
+    background-color: hexToRGBA(map-get($blues, 'light'), 0.1);
     border: 0.0625rem dashed map-get($blues, "light"); // 1px
   }
   // drag & drop
@@ -200,7 +200,7 @@
     display: inline-block;
     width: 100%;
     height: 7.875rem; // 126px
-    background-color: rgba(135, 206, 255, 0.1);
+    background-color: hexToRGBA(map-get($blues, 'light'), 0.1);
     border: 0.0625rem dashed map-get($blues, "light"); // 1px
     .icon { opacity: 0; }
     .component-name { opacity: 0; }
