--- a/src/main/resources/public/src/scss/process/_variables.scss
+++ b/src/main/resources/public/src/scss/process/_variables.scss
@@ -10,7 +10,7 @@ $layout-header-bg-color:                     $blue;
 $layout-element-palette-width:               6.25rem; // 100px
 $layout-element-palette-bg-color:            $white;
 $layout-element-palette-border:              0.0625rem solid map-get($grays, "line"); // 1px
-$layout-element-palette-box-shadow:          0.0625rem 0 0.4375rem 0 rgba(204, 206, 209, 0.15);// 1px 0px 7px 0px $pressed-gray, 불투명도 15%;
+$layout-element-palette-box-shadow:          0.0625rem 0 0.4375rem 0 hexToRGBA(map-get($grays, 'pressed'), 0.15);// 1px 0px 7px 0px $pressed-gray, 불투명도 15%;
 $icon-rectangle-menu-color:                  map-get($grays, "pressed");
 
 // main > drawing-board
@@ -55,7 +55,7 @@ $layout-properties-header-bg-color:          map-get($blues, "hover");
 $layout-properties-width:                     18.75rem; // 300px
 $layout-properties-bg-color:                  $white;
 $layout-properties-border:                    0.0625rem solid map-get($grays, "line"); // 1px
-$layout-properties-box-shadow:                -0.0625rem 0.9375rem 0.4375rem 0 rgba(204, 206, 209, 0.15);// -1px 15px 7px 0px $pressed-gray, 불투명도 15%;
+$layout-properties-box-shadow:                -0.0625rem 0.9375rem 0.4375rem 0 hexToRGBA(map-get($grays, 'pressed'), 0.15);// -1px 15px 7px 0px $pressed-gray, 불투명도 15%;
 
 // 세부 속성명
 $properties-title-font-size:                  $font-size-base; // 16px
