--- a/src/main/resources/public/src/scss/template/_alerts.scss
+++ b/src/main/resources/public/src/scss/template/_alerts.scss
@@ -16,45 +16,45 @@
     overflow: auto;
 
     &.gmodal-active {
-      z-index: $z-index-alert;
       display: block;
+      z-index: $z-index-alert;
     }
   }
 
   &-backdrop {
     z-index: $z-index-alert;
     @include fixed(0, 0, 0, 0);
-    background: rgba(116, 147, 179, 0.5);
+    background: hexToRGBA(#7493b3, 0.5);
   }
 
   &-dialog {
-    z-index: $z-index-alert;
-    border: $alert-border;
-    border-radius: $alert-border-size;
     @include absolute(8em, 0, null, 0);
     width: 100%;
-    line-height: 1;
     max-width: 26.875rem;
+    line-height: 1;
+    padding: 1.5625rem;
     margin: 0 auto 2em auto;
     box-sizing: $alert-box-sizing;
-    background: $white;
     box-shadow: $alert-box-shadow;
-    padding: 1.5625rem;
+    border: $alert-border;
+    border-radius: $alert-border-size;
+    background: $white;
+    z-index: $z-index-alert;
   }
 
   &-title {
     padding: 1em;
-    text-align: center;
     font-size: $alert-font-size;
     box-sizing: $alert-box-sizing;
+    text-align: center;
   }
 
   &-body {
+    min-height: 3.4375rem;    //55px
     padding: 0 0 0 3.875rem;  // 0 0 0 62px
     margin-bottom: 2rem;      // 32px
-    overflow: auto;
-    min-height: 3.4375rem;    //55px
     box-sizing: $alert-box-sizing;
+    overflow: auto;
   }
 
   &-message {
@@ -72,20 +72,18 @@
   }
 
   &-button {
-    border: $alert-border;
-    margin: 0rem 0rem 0rem $alert-margin-size;
-    padding: 0.4375rem 1.5rem;
-    text-align: center;
+    display: inline-block;
     color: #3F4B56;
     font-size: $alert-font-size;
     font-weight: $font-weight-medium;
     text-transform: uppercase;
-    cursor: pointer;
-    display: inline-block;
-    -webkit-border-radius: $alert-border-size;   // 1px
-    -moz-border-radius: $alert-border-size;      // 1px
-    border-radius: $btn-border-radius;           // 3px
     text-decoration: none;
+    text-align: center;
+    margin: 0rem 0rem 0rem $alert-margin-size;
+    padding: 0.4375rem 1.5rem;
+    border: $alert-border;
+    @include borderRadius($btn-border-radius); // 3px
+    cursor: pointer;
   }
 
   &-icon {
@@ -107,8 +105,8 @@
   }
 }
 
-@media only screen and (max-width:53em){
-  .gmodal-dialog{
+@media only screen and (max-width:53em) {
+  .gmodal-dialog {
     width: auto;
     margin: 0 auto $alert-margin-size auto;  // 5px
     top: $alert-margin-size;                 // 5px
@@ -116,8 +114,8 @@
     left: $alert-margin-size;                // 5px
   }
 }
-@media only screen and (max-width:32em){
-  .gmodal-button{
+@media only screen and (max-width:32em) {
+  .gmodal-button {
     display: block;
     margin: 0.5em;
   }
