--- a/src/main/resources/public/src/scss/template/_file-uploader.scss
+++ b/src/main/resources/public/src/scss/template/_file-uploader.scss
@@ -136,7 +136,7 @@
           top: 0;
           left: 0;
           text-align: center;
-          color: rgba(0, 0, 0, 0.9);
+          color: hexToRGBA($black, 0.9);
           opacity: 0;
           z-index: $z-index-between-event-and-default;
           // 파일 아이콘
