--- a/src/main/resources/public/src/scss/template/_mixins.scss
+++ b/src/main/resources/public/src/scss/template/_mixins.scss
@@ -6,4 +6,5 @@
 @import "mixins/_font.scss";
 @import "mixins/_text.scss";
 @import "mixins/_element.scss";
+@import 'mixins/_border.scss';
 @import "mixins/_layout.scss";
