#10654 공지사항, FAQ 목록 조회 및 구조 수정 1. 데이터와 전체 개수 분리 2. 공지사항 entity 구조 개선

--- a/src/main/resources/public/template/notice/noticeEdit.html
+++ b/src/main/resources/public/template/notice/noticeEdit.html
@@ -34,7 +34,7 @@
                 </div>
                 <div class="flex-column edit-row">
                     <label th:text="#{common.label.writer}"></label>
-                    <input type="text" th:value="${notice?.aliceUserEntity?.userName} ? ${notice.aliceUserEntity.userName} : ${#authentication.details.userName}"
+                    <input type="text" th:value="${notice?.createUserName} ? ${notice.createUserName} : ${#authentication.details.userName}"
                            disabled/>
                 </div>
                 <div class="flex-column edit-row">
