--- a/src/main/resources/public/template/notice/noticePopUp.html
+++ b/src/main/resources/public/template/notice/noticePopUp.html
@@ -15,7 +15,7 @@
             </div>
             <div class="flex-column view-row">
                 <div class="flex-row justify-content-end">
-                    <span class="user-name" id="spanUserName"  th:text="${noticePopUp?.aliceUserEntity.userName}"></span>
+                    <span class="user-name" id="spanUserName"  th:text="${noticePopUp?.createUserName}"></span>
                     <span class="vertical-bar"></span>
                     <span id="spanCreateDt" th:text="${noticePopUp?.createDt}"></span>
                 </div>
