--- a/src/main/resources/public/template/notice/noticeView.html
+++ b/src/main/resources/public/template/notice/noticeView.html
@@ -21,7 +21,7 @@
             </div>
             <div class="flex-column view-row">
                 <div class="view-sub-title flex-row justify-content-end">
-                    <span class="user-name" id="spanUserName" th:text="${notice?.aliceUserEntity.userName}"></span>
+                    <span class="user-name" id="spanUserName" th:text="${notice?.createUserName}"></span>
                     <span class="vertical-bar"></span>
                     <span id="spanCreateDt" th:text="${notice.createDt}"></span>
                 </div>
