--- a/src/main/resources/public/template/portal/notice/noticeView.html
+++ b/src/main/resources/public/template/portal/notice/noticeView.html
@@ -20,7 +20,7 @@
             <div class="view-sub-title flex-row justify-content-end">
                 <span id="spanCreateDt" th:text="${notice.createDt}"></span>
                 <span class="vertical-bar"></span>
-                <span th:text="${notice?.aliceUserEntity.userName}"></span>
+                <span th:text="${notice?.createUserName}"></span>
             </div>
             <div class="horizontal-bar"></div>
             <div class="view-content flex-row">
